// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly for "cfamily" 1`] = `
<ClangGCC
  onStepValidationChange={[MockFunction]}
  projectKey="projectKey"
/>
`;

exports[`should render correctly for "dotnet" 1`] = `
<DotNet
  projectKey="projectKey"
/>
`;

exports[`should render correctly for "gradle" 1`] = `
<JavaGradle
  projectKey="projectKey"
/>
`;

exports[`should render correctly for "maven" 1`] = `
<JavaMaven
  projectKey="projectKey"
/>
`;

exports[`should render correctly for "other" 1`] = `
<Other
  projectKey="projectKey"
/>
`;

exports[`should render correctly for undefined 1`] = `""`;
